[tool.poetry]
name = "cure"
version = "0.1.0"
description = "The python version code of the paper `Evolution of cooperation through cumulative reciprocity`."
authors = ["GuangchenJ <guangchen98.jiang@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
